# bootstrap_python_cli_to_pkg

./: .gitignore  LICENSE  MANIFEST.in  README.md  ascii_image.txt  builder.sh  ensure_path.sh  postinstall_test.sh  pyproject.toml  requirements.txt  schema.json  setup_environment.sh
bootstrap_cli/: __init__.py  bootstrap.py  cli.py  setup_env.py  utils.py
bootstrap_cli/templates/: crud_functions.tmpl.j2  fetch_functions.tmpl.j2  go_structs.tmpl.j2  index.tmpl.j2  write_to_outbox.tmpl.j2
